--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,9 @@ cache:
   directories:
     - '$HOME/.m2/repository'
     
-script:
-  - ./mvnw clean install -B
+install:
+- mvn -N io.takari:maven:wrapper
+- ./mvnw install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
 
 after_success:
   - docker login -u $DOCKER_USER -p $DOCKER_PASS
